chore: release 1.0.0, update metadata, add SPA config

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "love-confession",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "homepage": "https://talktonle2.github.io/love-confession/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:gh": "cross-env VITE_DEPLOY_TARGET=gh-pages vite build",
-    "deploy": "npm run build:gh && gh-pages -d dist",
+    "deploy": "npm run build:gh && copy dist\\index.html dist\\404.html && gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
