--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
     "theme_color": "#db2777",
     "icons": [
         {
-            "src": "/vite.svg",
+            "src": "/favicon.svg",
             "sizes": "192x192",
             "type": "image/svg+xml"
         },
         {
-            "src": "/vite.svg",
+            "src": "/favicon.svg",
             "sizes": "512x512",
             "type": "image/svg+xml"
         }
